update quiz answers

--- a/qual/index.html
+++ b/qual/index.html
@@ -1321,7 +1321,7 @@
                 <quiz
                     id="structure_quiz_1"
                     original="The incidence of Am stars hosting hot-brown dwarfs resulted higher than the frequency of Am stars in general"
-                    simplified="Compared to Am stars generally, Am stars which hosted hot-brown drafs were more frequent."
+                    simplified="Compared to Am stars generally, Am stars which hosted hot-brown dwrafs were more frequent."
                     ></quiz>
             </tab-content>
             <tab-content title="Conclusion & Reference">
