--- a/index.html
+++ b/index.html
@@ -421,20 +421,31 @@
                                             </label>
                                         </div>
                                         <div class="column-severity w-25">
-                                            <input @click="substitution_show_grammar" class="checkbox-tools checkbox-tools-severity " type="radio" name="substitution-less-severity"
+                                            <input @click="substitution_show_coref" class="checkbox-tools checkbox-tools-severity " type="radio" name="substitution-less-severity"
                                                 id="substitution-less-severity-3" value="bad" v-model="substitution_less_severity_box">
                                             <label class="for-checkbox-tools-severity question-substitution" for="substitution-less-severity-3">
                                                 3 - somewhat
                                             </label>
                                         </div>
                                         <div class="column-severity w-25">
-                                            <input @click="substitution_show_grammar" class="checkbox-tools checkbox-tools-severity " type="radio" name="substitution-less-severity"
+                                            <input @click="substitution_show_coref" class="checkbox-tools checkbox-tools-severity " type="radio" name="substitution-less-severity"
                                                 id="substitution-less-severity-4" value="very bad" v-model="substitution_less_severity_box">
                                             <label class="for-checkbox-tools-severity question-substitution" for="substitution-less-severity-4">
                                                 4 - a lot
                                             </label>
                                         </div>
                                     </div>
+                                </div>
+
+                                <div class="substitution-coref-div dn">
+                                    <p class="mt0 pt3 b tracked-light">Does this substitution result in missing subject (i.e. "Emily" -> "She")?
+                                        <input class="checkbox-tools-yes-no" type="radio" name="substitution-coref-yes-no"
+                                            id="substitution-coref-yes" value="yes"  v-model="substitution_coref_yes_no_box">
+                                        <label class="normal for-checkbox-tools-yes-no question-substitution" for="substitution-coref-yes">yes</label>
+                                        <input class="checkbox-tools-yes-no" type="radio" name="substitution-coref-yes-no"
+                                            id="substitution-coref-no" value="no"  v-model="substitution_coref_yes_no_box">
+                                        <label class="normal for-checkbox-tools-yes-no question-substitution" for="substitution-coref-no">no</label>
+                                    </p>
                                 </div>
                                                               
                                 <div class="substitution-more substitution-type-div dn">
@@ -931,28 +942,41 @@
                     <div id="dropdown-button-container">
                         <div class="single_part over-hide z-bigger mt3">
                             <div class="row">
-                                <p class="mb3 b tracked-light">Select the impact of this reordering edit on the sentence simplicity.</p>
-                                <div class="tc">
-                                    <div class="column-severity w-33">
-                                        <input @click="impact_click('reorder', $event)" class="checkbox-tools checkbox-tools-severity " type="radio" name="reorder-impact"
-                                            id="reorder-impact-negative" value="negative" v-model="reorder_impact_box">
-                                        <label class="for-checkbox-tools-severity question-reorder" for="reorder-impact-negative">
-                                            Negative Impact
-                                        </label>
-                                    </div>
-                                    <div class="column-severity w-33">
-                                        <input @click="impact_click('reorder', $event)" class="checkbox-tools checkbox-tools-severity " type="radio" name="reorder-impact"
-                                            id="reorder-impact-no" value="no" v-model="reorder_impact_box">
-                                        <label class="for-checkbox-tools-severity question-reorder" for="reorder-impact-no">
-                                            No Impact
-                                        </label>
-                                    </div>
-                                    <div class="column-severity w-33">
-                                        <input @click="impact_click('reorder', $event)" class="checkbox-tools checkbox-tools-severity " type="radio" name="reorder-impact"
-                                            id="reorder-impact-positive" value="positive" v-model="reorder_impact_box">
-                                        <label class="for-checkbox-tools-severity question-reorder" for="reorder-impact-positive">
-                                            Positive Impact
-                                        </label>
+                                <div>
+                                    <p class="b tracked-light">Does this reordering happen on a word-level or component-level?
+                                        <input class="checkbox-tools-yes-no" type="radio" name="reorder-level"
+                                        id="reorder-word" value="word" v-model="reorder_level_box">
+                                        <label class="normal for-checkbox-tools-yes-no question-reorder" for="reorder-word">word-level</label>
+                                        <input class="checkbox-tools-yes-no" type="radio" name="reorder-level"
+                                            id="reorder-component" value="component" v-model="reorder_level_box">
+                                        <label class="normal for-checkbox-tools-yes-no question-reorder" for="reorder-component">component-level</label>
+                                    </p>
+                                </div>
+
+                                <div>
+                                    <p class="mb3 b tracked-light">Select the impact of this reordering edit on the sentence simplicity.</p>
+                                    <div class="tc">
+                                        <div class="column-severity w-33">
+                                            <input @click="impact_click('reorder', $event)" class="checkbox-tools checkbox-tools-severity " type="radio" name="reorder-impact"
+                                                id="reorder-impact-negative" value="negative" v-model="reorder_impact_box">
+                                            <label class="for-checkbox-tools-severity question-reorder" for="reorder-impact-negative">
+                                                Negative Impact
+                                            </label>
+                                        </div>
+                                        <div class="column-severity w-33">
+                                            <input @click="impact_click('reorder', $event)" class="checkbox-tools checkbox-tools-severity " type="radio" name="reorder-impact"
+                                                id="reorder-impact-no" value="no" v-model="reorder_impact_box">
+                                            <label class="for-checkbox-tools-severity question-reorder" for="reorder-impact-no">
+                                                No Impact
+                                            </label>
+                                        </div>
+                                        <div class="column-severity w-33">
+                                            <input @click="impact_click('reorder', $event)" class="checkbox-tools checkbox-tools-severity " type="radio" name="reorder-impact"
+                                                id="reorder-impact-positive" value="positive" v-model="reorder_impact_box">
+                                            <label class="for-checkbox-tools-severity question-reorder" for="reorder-impact-positive">
+                                                Positive Impact
+                                            </label>
+                                        </div>
                                     </div>
                                 </div>
 
@@ -1047,28 +1071,30 @@
                     <div id="dropdown-button-container">
                         <div class="single_part over-hide z-bigger mt3">
                             <div class="row">
-                                <p class="mb3 b tracked-light">Select the impact of this split edit on the sentence simplicity.</p>
-                                <div class="tc">
-                                    <div class="column-severity w-33">
-                                        <input @click="impact_click('split', $event)" class="checkbox-tools checkbox-tools-severity " type="radio" name="split-impact"
-                                            id="split-impact-negative" value="negative" v-model="split_impact_box">
-                                        <label class="for-checkbox-tools-severity question-split" for="split-impact-negative">
-                                            Negative Impact
-                                        </label>
-                                    </div>
-                                    <div class="column-severity w-33">
-                                        <input @click="impact_click('split', $event)" class="checkbox-tools checkbox-tools-severity " type="radio" name="split-impact"
-                                            id="split-impact-no" value="no" v-model="split_impact_box">
-                                        <label class="for-checkbox-tools-severity question-split" for="split-impact-no">
-                                            No Impact
-                                        </label>
-                                    </div>
-                                    <div class="column-severity w-33">
-                                        <input @click="impact_click('split', $event)" class="checkbox-tools checkbox-tools-severity " type="radio" name="split-impact"
-                                            id="split-impact-positive" value="positive" v-model="split_impact_box">
-                                        <label class="for-checkbox-tools-severity question-split" for="split-impact-positive">
-                                            Positive Impact
-                                        </label>
+                                <div>
+                                    <p class="mb3 b tracked-light">Select the impact of this split edit on the sentence simplicity.</p>
+                                    <div class="tc">
+                                        <div class="column-severity w-33">
+                                            <input @click="impact_click('split', $event)" class="checkbox-tools checkbox-tools-severity " type="radio" name="split-impact"
+                                                id="split-impact-negative" value="negative" v-model="split_impact_box">
+                                            <label class="for-checkbox-tools-severity question-split" for="split-impact-negative">
+                                                Negative Impact
+                                            </label>
+                                        </div>
+                                        <div class="column-severity w-33">
+                                            <input @click="impact_click('split', $event)" class="checkbox-tools checkbox-tools-severity " type="radio" name="split-impact"
+                                                id="split-impact-no" value="no" v-model="split_impact_box">
+                                            <label class="for-checkbox-tools-severity question-split" for="split-impact-no">
+                                                No Impact
+                                            </label>
+                                        </div>
+                                        <div class="column-severity w-33">
+                                            <input @click="impact_click('split', $event)" class="checkbox-tools checkbox-tools-severity " type="radio" name="split-impact"
+                                                id="split-impact-positive" value="positive" v-model="split_impact_box">
+                                            <label class="for-checkbox-tools-severity question-split" for="split-impact-positive">
+                                                Positive Impact
+                                            </label>
+                                        </div>
                                     </div>
                                 </div>
 
