update quiz data

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     </div>
                 </div>
 
-                <div class="quality-selection w-100" data-category="deletion">
+                <div class="quality-selection w-100" id="deletion_edit_annotation" data-category="deletion">
                     <p class="f3 courier ttu mv1">Annotating an Edit <i class="fa-solid fa-pencil"></i></p>
                     <div class="f4 mt0 mb2 tc">
                         Edit:
@@ -288,7 +288,7 @@
                     </div>
                 </div>
 
-                <div class="quality-selection w-100" data-category="substitution">
+                <div class="quality-selection w-100" id="substitution_edit_annotation" data-category="substitution">
                     <p class="f3 courier ttu mv1">Annotating an Edit <i class="fa-solid fa-pencil"></i></p>
                     <div class="f4 mt0 mb2 tc">
                         Edit:
@@ -354,8 +354,6 @@
                                         </div>
                                     </div>
                                 </div>
-
-
 
                                 <div class="substitution-impact-positive substitution-impact-div dn">
                                     <p class="mb3 b tracked-light">Rate the efficacy (how much it helps you to read and understand the sentence?)</i>
@@ -702,7 +700,7 @@
                 </div>
 
 
-                <div class="quality-selection w-100" data-category="insertion">
+                <div class="quality-selection w-100" id="insertion_edit_annotation" data-category="insertion">
                     <p class="f3 courier ttu mv1">Annotating an Edit <i class="fa-solid fa-pencil"></i></p>
                     <div class="f4 mt0 mb2 tc">
                         Edit:
@@ -940,7 +938,7 @@
                     </div>
                 </div>
 
-                <div class="quality-selection w-100" data-category="reorder">
+                <div class="quality-selection w-100" id="reorder_edit_annotation" data-category="reorder">
                     <p class="f3 courier ttu mv1">Annotating an Edit <i class="fa-solid fa-pencil"></i></p>
                     <div class="f4 mt0 mb2 tc">
                         Edit:
@@ -1068,7 +1066,7 @@
                     </div>
                 </div>
 
-                <div class="quality-selection w-100" data-category="split">
+                <div class="quality-selection w-100" id="split_edit_annotation" data-category="split">
                     <p class="f3 courier ttu mv1">Annotating an Edit <i class="fa-solid fa-pencil"></i></p>
                     <div class="f4 mt0 mb2 tc">
                         Edit:
@@ -1186,7 +1184,7 @@
                     </div>
                 </div>
 
-                <div class="quality-selection w-100" data-category="structure">
+                <div class="quality-selection w-100" id="structure_edit_annotation" data-category="structure">
                     <p class="f3 courier ttu mv1">Annotating an Edit <i class="fa-solid fa-pencil"></i></p>
                     <div class="f4 mt0 mb2 tc">
                         Edit:
