--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 
                 <div class="fr mr3">
                     <div>
-                        <span v-for="n in (total_hits / 2)" v-bind:id="'circle-' + n" @click="go_to_hit_circle(n, $event)" class="circle pointer"><span class="tooltiptext">{{n}}</span></span>
+                        <span v-for="n in Math.floor(total_hits / 2)" v-bind:id="'circle-' + n" @click="go_to_hit_circle(n, $event)" class="circle pointer"><span class="tooltiptext">{{n}}</span></span>
                     </div>
                     <div class="mt2">
-                        <span v-for="n in (total_hits / 2)" v-bind:id="'circle-' + (n + (total_hits / 2))" @click="go_to_hit_circle(n + (total_hits / 2), $event)" class="circle pointer"><span class="tooltiptext">{{n + (total_hits / 2)}}</span></span>
+                        <span v-for="n in Math.ceil(total_hits / 2)" v-bind:id="'circle-' + (n + Math.floor(total_hits / 2))" @click="go_to_hit_circle(n + Math.floor(total_hits / 2), $event)" class="circle pointer"><span class="tooltiptext">{{n + Math.floor(total_hits / 2)}}</span></span>
                     </div>
                 </div>
             </div>
@@ -1316,8 +1316,7 @@
             <div>
                 <component :is="compiled_edits_html"></component>
             </div>
-            <div class="mt1">
-            </div>
+            <div id="hits-data" class="mt1 dn">{{hits_data}}</div>
         </section>
     </div>
 
