--- a/qual/index.html
+++ b/qual/index.html
@@ -1480,7 +1480,7 @@
                 <p>This concludes the tutorial of the interface.</p>
             </tab-content>
             <tab-content title="Quiz" class="quiz-tab">
-                <iframe src="../index.html?data_path=5_for_quiz.json" width="100%" height="900" id="quiz_5_iframe"></iframe>
+                <iframe src="../index.html?data=5_for_quiz.json" width="100%" height="900" id="quiz_5_iframe"></iframe>
             </tab-content>
         </form-wizard>
     </div>
