add note about broken split quiz in tutorial

--- a/qual/index.html
+++ b/qual/index.html
@@ -1146,6 +1146,7 @@
                 </example-sent>                
 
                 <h2>Quiz</h2>
+                <p><b>One of our annotators actually found this tutorial window doesn't work! In the real interface, we'll highlight the split for you, and you'll select the spans corresponding to the split. Just take a glance at the answer for this. Thank you.</b></p>
                 <h3 class="mb0">5.1:</h3>
                 <quiz
                     id="split_quiz_1"
