update the text

--- a/index.html
+++ b/index.html
@@ -156,22 +156,22 @@
                                 </div>
 
                                 <div class="span-selection-div" data-category="substitution">
-                                    <p class="mt0 mb2 b tracked-light">Select or click the text span from the <i>Original Sentence</i>.
+                                    <p class="mt0 mb2 b tracked-light">Select the text span from the <i>Original Sentence</i>.
                                     </p>
                                     <p class="tracked-light">Selected span: <span class="bg-substitution-light">{{selected_span_in_original}}</span></p>
                                     <div class="">
-                                        <p class="mb2 b tracked-light">Select or click the text span from the <i>Simplified Sentence</i>.
+                                        <p class="mb2 b tracked-light">Select the text span from the <i>Simplified Sentence</i>.
                                         </p>
                                         <p class="tracked-light">Selected span: <span class="bg-substitution-light">{{selected_span_in_simplified}}</span></p>
                                     </div>
                                 </div>
 
                                 <div class="span-selection-div" data-category="reorder">
-                                    <p class="mt0 mb2 b tracked-light">Select or click the text span from the <i>Original Sentence</i>.
+                                    <p class="mt0 mb2 b tracked-light">Select the text span from the <i>Original Sentence</i>.
                                     </p>
                                     <p class="tracked-light">Selected span: <span class="bg-reorder-light">{{selected_span_in_original}}</span></p>
                                     <div class="">
-                                        <p class="mb2 b tracked-light">Select or click the substitution span from the <i>Simplified Sentence</i>.
+                                        <p class="mb2 b tracked-light">Select the text span from the <i>Simplified Sentence</i>.
                                         </p>
                                         <p class="tracked-light">Selected span: <span class="bg-reorder-light">{{selected_span_in_simplified}}</span></p>
                                     </div>
