--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="quality-selection-divs">
-                <div class="quality-selection w-100 active" id="add_an_edit">
+                <div class="quality-selection w-100" id="add_an_edit">
                     <p class="f3 courier ttu mv1">Adding an Edit <i class="fa-solid fa-plus"></i></p>
         
                     <!-- <input type="text" id="text_input" name="quality" placeholder="type your problem"> -->
